# serach_engines_project

./: .gitignore  KmeansDeneme.ipynb  ann_custom_classification.ipynb  hello.py  pyproject.toml  readme.md  ui_to_py_build.bat
controllers/: data_page_controller.py  data_popup_controller.py  main_page_controller.py  multiple_cmp_result_page_cntrl.py  multiple_cmp_select_page_cntrl.py  result_page_controller.py
jupyter/: download_dataset.ipynb
modules/clustering/: clustering_methods.py
modules/constants/: constants.py
modules/dimension_reducer/: dimension_reducer_methods.py
modules/embeddings/: embedding_methods.py
modules/evaluation_metrics/: evaluation_metrics.py
modules/manager/: manager_class.py
modules/model/: embed_param_model.py
utilities/: nltk_tools.py  param_file_singleton.py  regex_tools.py  show_messages.py
view_py_files/: data_page.py  data_popup.py  main_page.py  multiple_cmp_result_page.py  multiple_cmp_select_page.py  result_page.py
view_ui_files/: data_page.ui  data_popup.ui  main_page.ui  multiple_comparision_result_page.ui  multiple_comparision_select_page.ui  result_page.ui
